Development history / change log, please read from bottom up

Version 3.2.3 - xx yyy 2015
HoTTViewer - add support to open and display saved OSD-files with Graupner/SJ HoTT Viewer App
HoTTAdapterD - enable live log for test 01-12 fields
Herkules III Telemetry - add support
fix - clean data model while importing CSV where record set number follow channel number 
HoTTAdapter* - adapt filter GPS data parsing for import bin log data
fix - scale number calculation error while display area is greater than 1500 pixels.

Version 3.2.2 - 19 Jul 2015
fix exception while record clone operation (cut)
fix minor errors in automated test
LiPoWatch - small correction of the serial communication to keep LEDs off
HoTTAdapter2* - fix error while opening OSD file with channels from earlier release

Version 3.2.1 - 21 Jun 2015
add current/voltage smoothing algorithm to be used for very short drop peaks
enhance device interface for charger to adapt curve smoothing according device needs 
HoTTAdapter* - refine sensor detection - to increase chance not in text-modus segment
HoTTAdapter* - correct channel time unit to µsec
HoTTAdapter* - adapt ESC Capacity filter
HoTTAdapter2* - fix problem missing receiver data not using Channel configuration
GraupnerUDP* - some adaptations to device internal behavior
Akkumatik - add support
HoTTAdapterX - add support with receiver and ESC data, rounds statistics (X-N8, X-4S)

Version 3.2.0 - 01 Mar 2015
fix initial synchronization of measurements
fix Junsi iCharger 206, 208, 306, 3010 constant time step to 2 seconds
fix problem while copy graphics into clip board several time in sequence
fix JLog2 context help page selection 
fix JLog2 configuration dialog - set drop downs to editable false since this event wasn't handled and does not activate save button
fix error not loading color from OSD file some colors (1,1,1)
CSV2SerialAdapter - fix error handling of missing status 
HoTTAdapter - fix receiver only with channels times 10 error 