@@ -4,6 +4,7 @@ Version 3.2.3 - xx yyy 2015
 HoTTViewer - add support to open and display saved OSD-files with Graupner/SJ HoTT Viewer App
 HoTTAdapterD - enable live log for test 01-12 fields
 Herkules III Telemetry - add support
+GigaLogger - add support
 fix - clean data model while importing CSV where record set number follow channel number 
 HoTTAdapter* - adapt filter GPS data parsing for import bin log data
 fix - scale number calculation error while display area is greater than 1500 pixels.
